# iter

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: iter-ci.yml
bench/: autovec.cpp  chain.cpp  fibonacci.cpp  filter.cpp  min.cpp  triples.cpp
example/: empty.cpp  main.cpp
include/: iter.hpp
include/iter/: all.hpp  any.hpp  box.hpp  chain.hpp  chunks.hpp  collect.hpp  comparison.hpp  compound.hpp  core.hpp  cycle.hpp  emplace_new.hpp  empty.hpp  enable_ranges.hpp  enumerate.hpp  enumerate_map.hpp  enumerate_with.hpp  filter.hpp  filter_map.hpp  find_linear.hpp  find_map.hpp  flatmap.hpp  flatten.hpp  fold.hpp  foreach.hpp  generate.hpp  generator.hpp  inspect.hpp  item.hpp  iter.hpp  iter_wrapper.hpp  last.hpp  map.hpp  map_while.hpp  max.hpp  min.hpp  move.hpp  nth.hpp  once.hpp  optional.hpp  partition.hpp  (+23 more)
include/iter/adapters/: adapters.hpp  batching.hpp  box.hpp  chain.hpp  chunk_by.hpp  chunks.hpp  consteval_only.hpp  cycle.hpp  elements.hpp  enumerate.hpp  enumerate_map.hpp  filter.hpp  filter_map.hpp  flatmap.hpp  flatten.hpp  inspect.hpp  map.hpp  map_while.hpp  move.hpp  reverse.hpp  skip.hpp  skip_eager.hpp  skip_while.hpp  split.hpp  take.hpp  take_while.hpp  to_pointer_iter.hpp  window.hpp  zip.hpp  zip_map.hpp
include/iter/collectors/: collect.hpp  collectors.hpp  into_input_range.hpp  partition.hpp  sorted.hpp  to_input_range.hpp  unzip.hpp
include/iter/consumers/: all.hpp  any.hpp  consumers.hpp  find_linear.hpp  find_map.hpp  fold.hpp  foreach.hpp  last.hpp  max.hpp  min.hpp  nth.hpp  product.hpp  reduce.hpp  sum.hpp
include/iter/core/: assert_consteval.hpp  comparison.hpp  core.hpp  emplace_new.hpp  item.hpp  iter_wrapper.hpp  macros.hpp  relocation.hpp  stability.hpp  tuple.hpp  version.hpp
include/iter/dollar_macros/: define.hpp  undef.hpp
include/iter/iters/: compound.hpp  empty.hpp  generate.hpp  generator.hpp  iter_ref.hpp  iters.hpp  once.hpp  optional.hpp  owning_iter.hpp  random_access_container_iter.hpp  range.hpp  repeat.hpp  span.hpp  to_iter.hpp  to_iter_consteval.hpp
include/iter/macros/dollar/: define.hpp  undef.hpp
include/iter/macros/x/: iter_functions_simple.ipp  iter_functions_tmpl.ipp
include/iter/x_macros/: iter_functions.hpp  iter_functions_simple.ipp  iter_functions_tmpl.ipp
scripts/: finalize_release.sh  update_dollar_macros.sh  update_singleheader.sh  update_version.sh  update_x_macros.sh
singleheader/: iter.hpp
singleheader/iter/: iter.hpp
test/: all.cpp  any.cpp  batching.cpp  chain.cpp  chunk_by.cpp  chunks.cpp  collect.cpp  compound.cpp  cycle.cpp  empty.cpp  enumerate.cpp  filter.cpp  filter_map.cpp  find_linear.cpp  find_map.cpp  flatmap.cpp  flatten.cpp  fold.cpp  generate.cpp  generator.cpp  last.cpp  map.cpp  map_while.cpp  max.cpp  min.cpp  move.cpp  partition.cpp  range.cpp  reverse.cpp  split.cpp  sum.cpp  test.hpp  window.cpp  wrap.cpp  zip_map.cpp  zip_with.cpp
